# WaspsWithBazookas

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  changelog-template.hbs  docker-compose.yml  install.ps1  install.sh  package-lock.json  package.json  version.sh
.github/workflows/: chocolatey.yml  docker.yml  homebrew.yml  publish.yml  release.yml
Formula/: waspswithbazookas.rb
chocolatey/: waspswithbazookas.nuspec
chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
cli/: wwb-cli-hive-poke.js  wwb-cli-hive-report.js  wwb-cli-hive-status.js  wwb-cli-hive-torch.js  wwb-cli-hive-wasps.js  wwb-cli-hive.js  wwb-cli-spawn-aws.js  wwb-cli-spawn-local.js  wwb-cli-spawn.js  wwb-cli.js
cloudflare/wwb-cf-bazooka/: Cargo.toml  README.md  wrangler.toml
cloudflare/wwb-cf-bazooka/src/: lib.rs  types.rs
cloudflare/wwb-cf-wasp/: Cargo.toml  README.md  deploy_with_heartbeat.sh  test_heartbeat.sh  wrangler.toml
cloudflare/wwb-cf-wasp/src/: bazooka_client.rs  hive_client.rs  lib.rs  routes.rs  types.rs  wasp_state.rs
config/: config.json
docs/: API.md  INSTALL.md  INTRO.md  RUN.md  TEST_DUMMY.md
hive/: hive.js
hive/client/: index.html
postman/: WaspsWithBazookas.postman_collection.json
src/: battle.rs  hive.rs  test_dummy.rs  wasp.rs
src/client/: index.html
test/: test-http-server.js
wasp/: wasp.js  wrk.lua
