[package]
name = "wasps-with-bazookas"
version = "2.0.3"
edition = "2021"
authors = ["Phara0h <your-email@example.com>"]
description = "Distributed load testing tool - like bees with machine guns, but way more power!"
license = "GPL-2.0"
repository = "https://github.com/Phara0h/WaspsWithBazookas"
homepage = "https://github.com/Phara0h/WaspsWithBazookas"
documentation = "https://github.com/Phara0h/WaspsWithBazookas"
readme = "README.md"
keywords = ["load-testing", "performance", "distributed", "http", "testing"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[[bin]]
name = "wasp"
path = "src/wasp.rs"

[[bin]]
name = "hive"
path = "src/hive.rs"

[[bin]]
name = "test-dummy"
path = "src/test_dummy.rs"

[dependencies]
twoway = "0.2"
mio = { version = "1.0", features = ["os-poll", "net"] }
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
nix = { version = "0.30", features = ["socket"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
webpki-roots = "0.25"
# Wasp agent dependencies
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
hostname = "0.3"
# Hive server dependencies
regex = "1.0"
# Test dummy server dependencies
may_minihttp = "0.1"
